# plane-system

./: .gitignore  .json  .travis.yml  CROSS-COMPILING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  debug.json  geotag_test.py  out.strace  plane-system.default.json  plane-system.json  remove_exif.py  run-remote.sh  run.sh  save-data-upload.py  set-env.sh  test.py  zoom.json  zoom.txt  zoomhehe.json  zoomlevels.json
config/: bartholomew.json  camera-only.json  camera-with-csb.json  camera-with-preview.json  csb.json  gimbal-only.json  livestream.json  matrice-with-aux.json  matrice.json  modes-test-no-gimbal.json  modes-test.json  none.json  pixhawk-test.json  pixhawk.json  preview.json  wifi-test.json  wifi.json
crates/async-util/: Cargo.toml
crates/async-util/src/: lib.rs
crates/aux-camera/: Cargo.toml
crates/aux-camera/src/: lib.rs
crates/aux-camera/src/preview/: mod.rs  task.rs
crates/aux-camera/src/save/: command.rs  interface.rs  mod.rs  task.rs
crates/aux-camera/src/stream/: client.rs  command.rs  interface.rs  mod.rs  task.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/download/: Cargo.toml
crates/download/src/: config.rs  lib.rs  task.rs
crates/gimbal/: Cargo.toml
crates/gimbal/src/: client.rs  command.rs  config.rs  lib.rs  server.rs  task.rs
crates/gimbal/src/interface/: hardware.rs  mod.rs  software.rs
crates/gs/: Cargo.toml
crates/gs/src/: config.rs  interface.rs  lib.rs  mod.rs  task.rs
crates/livestream/: Cargo.toml
crates/livestream/src/: lib.rs
crates/livestream/src/custom/: command.rs  mod.rs  task.rs
crates/livestream/src/preview/: mod.rs  task.rs
crates/livestream/src/save/: task.rs
crates/livestream/src/stream/: command.rs  mod.rs  task.rs
crates/main-camera/: Cargo.toml
crates/main-camera-csb/: Cargo.toml
crates/main-camera-csb/src/: config.rs  event.rs  lib.rs  task.rs
crates/main-camera/src/: command.rs  config.rs  csb.rs  interface.rs  lib.rs  server.rs  state.rs
crates/main-camera/src/client/: command.rs  mod.rs  util.rs
crates/main-camera/src/task/: control.rs  download.rs  event.rs  live.rs  mod.rs  util.rs
crates/modes/: Cargo.toml
crates/modes/src/: command.rs  config.rs  lib.rs
crates/modes/src/task/: control.rs  mod.rs  search.rs  server.rs  standby.rs  testing.rs  util.rs
crates/pixhawk/: Cargo.toml
crates/pixhawk/src/: config.rs  event.rs  interface.rs  lib.rs  mod.rs  state.rs  task.rs
crates/serde-util/: Cargo.toml
crates/serde-util/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: config.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docker/: build.sh
docker/base/: Dockerfile  build-rpi3-rapsbian.sh  build-rpi4-ubuntu.sh
docker/complete/: Dockerfile
docker/image/: Dockerfile  README.md  build-rpi3-rapsbian-x64.sh  build-rpi4-ubuntu-arm.sh  build-rpi4-ubuntu-x64.sh  build-rpi4-ubuntu.sh
docker/image/base/: Dockerfile  build-rpi3-rapsbian.sh
docker/user/: build.sh
docs/: CONFIG.md  CROSS-COMPILING.md
src/: config.rs  dummy.rs  main.rs  state.rs  test.py  test2.py  util.rs
src/camera/: aux.rs  client.rs  client_old.rs  command.rs  interface.rs  main.rs  mod.rs  state.rs
src/camera/aux/: mod.rs
src/camera/aux/save/: client.rs  command.rs  interface.rs
src/camera/aux/stream/: client.rs  command.rs  interface.rs
src/camera/auxiliary/save/: command.rs  interface.rs
src/camera/auxiliary/stream/: command.rs  interface.rs
src/camera/client/: command.rs  mod.rs  util.rs
src/camera/main/: command.rs  csb.rs  interface.rs  mod.rs  state.rs
src/camera/main/client/: command.rs  mod.rs  util.rs
src/cli/: args.rs  config.rs  interactive.rs  mod.rs  repl.rs
src/client/: camera.rs  gimbal.rs  mod.rs  pixhawk.rs
src/client/pixhawk/: client.rs  interface.rs  mavlink_async.rs  mod.rs
src/command/: mod.rs
src/controller/: mod.rs
src/controller/gimbal/: mod.rs
src/gimbal/: client.rs  command.rs  interface.rs  mod.rs
src/gimbal/interface/: hardware.rs  mod.rs  software.rs
src/gs/: mod.rs
src/image/: mod.rs
src/interface/: camera.rs  mod.rs  pixhawk.rs
src/pixhawk/: client.rs  mavlink_async.rs  mod.rs  state.rs
src/save/: client.rs  command.rs  interface.rs  mod.rs
src/scheduler/: backend.rs  mod.rs  state.rs
src/server/: mod.rs
src/stream/: client.rs  command.rs  interface.rs  mod.rs
src/telemetry/: mod.rs
