[package]
name = "plane-system"
version = "1.0.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2021"

[profile.release]
strip = true
incremental = true

[dependencies]
# subcrates
ps-aux-camera = { path = "crates/aux-camera", optional = true }
ps-main-camera = { path = "crates/main-camera" }

# logging + error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
color-backtrace = "0.5.1"
console-subscriber = "0.1.8"
anyhow = "1.0"

# async 
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
flume = "0.10"
async-trait = "0.1"

# protocols + serialization
serde = "1.0"
serde_millis = "0.1.1"
serde_json = "1.0"
mavlink = { features = [
  "ardupilotmega",
  "uavionix",
  "icarous",
], git = "https://github.com/laptou/rust-mavlink" }
simplebgc = { git = "https://github.com/laptou/simplebgc-rs" }
ptp = { git = "https://github.com/CUAir/rust-ptp" }
num-traits = "0.2"
num-derive = "0.3"
serialport = "4.0.1"

# http
warp = "0.3"
reqwest = { version = "0.11", features = [
  "json",
  "multipart",
], default-features = false }

# utility
bytes = "1.1"
ctrlc = "3.2"
clap = { version = "3", features = ["derive"] }
config = "0.11.0"
rustyline = "9.0"

chrono = { workspace = true }
geo = { workspace = true }
colored = "2"
humansize = "1.1"
prettytable-rs = "0.8"

# i/o
rusb = "0.9"
tokio-serial = { git = "https://github.com/CUAir/tokio-serial.git", default-features = false }
rppal = "0.13.1"

[features]
default = ["udev", "aux-camera"]
udev = ["tokio-serial/libudev", "serialport/libudev"]
aux-camera = ["ps-aux-camera"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
geo = { version = "0.23", features = ["use-serde"] }

futures = "0.3"
tokio = { version = "1.16", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
flume = "0.10"
async-trait = "0.1"

