[package]
name = "plane-system"
version = "1.0.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2021"

[profile.release]
strip = true
incremental = true

[dependencies]
# subcrates
ps-aux-camera = { path = "crates/aux-camera", optional = true }
ps-main-camera = { path = "crates/main-camera" }
ps-gs = { path = "crates/gs" }
ps-pixhawk = { path = "crates/pixhawk" }
ps-types = { path = "crates/types" }

# logging + error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
color-backtrace = "0.5.1"
console-subscriber = "0.1.8"
anyhow = { workspace = true }

# async 
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
flume = { workspace = true }
async-trait = { workspace = true }

# protocols + serialization
serde = { workspace = true }
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"

# http
warp = "0.3"
reqwest = { version = "0.11", features = [
  "json",
  "multipart",
], default-features = false }

# utility
ctrlc = "3.2"
clap = { version = "3", features = ["derive"] }
config = "0.13"
rustyline = "10.0"

chrono = { workspace = true }
geo = { workspace = true }
colored = "2"
humansize = "2.1"
prettytable-rs = "0.9"

[features]
default = ["aux-camera"]
aux-camera = ["ps-aux-camera"]
csb = ["ps-main-camera/csb"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
bytes = "1.1"

chrono = { version = "0.4", features = ["serde"] }
geo = { version = "0.23", features = ["use-serde"] }
uom = { version = "0.33", features = ["use_serde"] }

futures = "0.3"
tokio = { version = "1.16", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
flume = "0.10"
async-trait = "0.1"

num-traits = "0.2"
num-derive = "0.3"
