[package]
name = "ps-client"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio-util = "0.7"
tokio-stream = "0.1"
tokio = { version = "1.16", features = ["rt"] }
anyhow = "1.0"
