[package]
name = "ps-download"
version = "0.1.0"
edition = "2021"

[dependencies]
ps-main-camera = { path = "../main-camera" }
ps-telemetry = { path = "../telemetry" }
ps-client = { path = "../client" }
ps-types = { path = "../types" }

chrono = { workspace = true }
geo = { workspace = true }
serde = { workspace = true }

# logging + error handling
anyhow = { workspace = true }
log = { workspace = true }

# async 
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = "0.1"
flume = "0.10"

[features]
csb = ["ps-main-camera/csb"]
