[package]
name = "ps-gimbal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplebgc = { git = "https://github.com/cuair/simplebgc-rs", rev = "2796cfa" }

ps-client = { path = "../client" }

# logging + error handling
anyhow = "1.0"
log = "0.4"

# async 
tokio = { workspace = true }
tokio-stream = { version = "0.1" }
tokio-serial = { version = "5.4" }
async-trait = { workspace = true }
futures = { workspace = true }
flume = { workspace = true }

# serialization
serde = { workspace = true }

# utility
clap = { version = "3", features = ["derive"] }
chrono = { workspace = true }
enumflags2 = "0.7"

# i/o
tokio-util = { version = "0.7" }
