[package]
name = "ps-gimbal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
thiserror = "1.0"
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-serial = "5.4.1"
anyhow = { workspace = true }
flume = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
ps-client = { path = "../client" }
enumflags2 = "0.7"
simplebgc = { git = "https://github.com/CUAir/simplebgc-rs.git", rev = "feb7a99d74a2c090f508e8beb0b67edeadce1cc4" }
