[package]
name = "ps-gs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ps-serde-util = { path = "../serde-util" }
 ps-client = { path = "../client" }
 

 # logging + error handling
 anyhow = "1.0"
 log = "0.4"

 # async 
 tokio = { version = "1.16", features = ["rt"] }
 tokio-stream = { version = "0.1", features = ["sync"] }
 futures = "0.3"
 async-trait = "0.1"
 flume = "0.10"