[package]
name = "ps-livestream"
version = "0.10.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2021"

[dependencies]
ps-async-util = { path = "../async-util" }
ps-main-camera = { path = "../main-camera" }
ps-client = { path = "../client" }

gst = { version = "0.19", package = "gstreamer" }
gst-app = { version = "0.19", package = "gstreamer-app" }

# logging + error handling
anyhow = "1.0"
log = "0.4"

# async 
tokio = { workspace = true }
tokio-stream = { version = "0.1" }
async-trait = { workspace = true }
futures = { workspace = true }
flume = { workspace = true }

# serialization
serde = { workspace = true }

# utility
clap = { workspace = true }
chrono = { workspace = true }
drop_guard = "0.3.0"
strfmt = "0.2"

# i/o
tokio-util = { version = "0.7" }
