[package]
name = "ps-main-camera-csb"
version = "1.0.0"
edition = "2021"

[dependencies]
ps-serde-util = { path = "../serde-util" }
ps-client = { path = "../client" }

# logging + error handling
anyhow = "1.0"
log = "0.4"

# async 
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"
flume = "0.10"

# protocols + serialization
serde = "1.0"
num-traits = "0.2"
num-derive = "0.3"

# utility
bytes = "1.1"
defer = "0.1"
clap = { version = "3", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
geo = { version = "0.23.0", features = ["use-serde"] }

# i/o
tokio-serial = { git = "https://github.com/CUAir/tokio-serial.git", default-features = false }
rppal = "0.13.1"
tokio-util = { version = "0.7", features = ["codec"] }
