[package]
name = "ps-modes"
version = "1.0.0" 
authors = ["Amin Benalla <mohamedabenalla@gmail.com>", "Caroline Hohner <chohner2@comcast.net>"]
edition = "2021"

[dependencies]
ps-serde-util = { path = "../serde-util" }
ps-client = { path = "../client" }
ps-main-camera = { path = "../main-camera"}
ps-livestream = { path = "../livestream"}
ps-telemetry = { path = "../telemetry"}
ps-gimbal = { path = "../gimbal" }


# logging + error handling
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"

# async 
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.6"
futures = "0.3"
async-trait = "0.1"
flume = "0.10"

# protocols + serialization
serde = "1.0"
num-traits = "0.2"
num-derive = "0.3"

# utility
bytes = "1.1"
defer = "0.1"
clap = { version = "4", features = ["derive"] }

chrono = { workspace = true }
geo = { workspace = true }

# i/o
tokio-serial = { git = "https://github.com/CUAir/tokio-serial.git", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }

