[package]
name = "ps-pixhawk"
version = "1.0.0"
edition = "2021"

[dependencies]
ps-serde-util = { path = "../serde-util" }
ps-client = { path = "../client" }
ps-types = { path = "../types" }

# logging + error handling
anyhow = { workspace = true }
log = { workspace = true }

# async 
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
