[package]
name = "ps-pixhawk"
version = "1.0.0"
edition = "2021"

[dependencies]
ps-serde-util = { path = "../serde-util" }
ps-client = { path = "../client" }
ps-types = { path = "../types" }

serde = { workspace = true }
geo = { workspace = true }
bytes = { workspace = true }
uom = { workspace = true }

# logging + error handling
anyhow = { workspace = true }
log = { workspace = true }

# async 
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }

num-traits = { workspace = true }
num-derive = { workspace = true }

mavlink = { features = [
  "ardupilotmega",
  "uavionix",
  "icarous",
], git = "https://github.com/laptou/rust-mavlink" }
