[package]
name = "ps-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
ps-main-camera-csb = { path = "../main-camera-csb" }
ps-pixhawk = { path = "../pixhawk" }
ps-client = { path = "../client" }
ps-types = { path = "../types" }

chrono = { workspace = true }
serde = { workspace = true }

# logging + error handling
anyhow = { workspace = true }
log = { workspace = true }

# async 
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }

